[tool.poetry]
name = "timed-backend"
version = "3.0.7"
description = "Timetracking software"
repository = "https://github.com/adfinis/timed-backend"
authors = ["Adfinis AG"]
license = "AGPL-3.0"
readme = "README.md"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.8",
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"
django = "^3.2.19"
# might remove this once we find out how the jsonapi extras_require work
django-cors-headers = "^4.1.0"
django-filter = "^23.2"
django-multiselectfield = "^0.1.12"
django-prometheus = "^2.3.1"
djangorestframework = "^3.14.0"
djangorestframework-jsonapi = "^6.0.0"
mozilla-django-oidc = "^3.0.0"
psycopg2-binary = "^2.9.3"
pytz = "^2023.3"
pyexcel-webio = "^0.1.4"
pyexcel-io = "^0.6.6"
django-excel = "^0.0.10"
django-nested-inline = "^0.4.5"
pyexcel-ods3 = "^0.6.1"
pyexcel-xlsx = "^0.6.0"
pyexcel-ezodf = "^0.3.4"
django-environ = "^0.10.0"
django-money = "^3.1.0"
python-redmine = "^2.4.0"
sentry-sdk = "^1.26.0"
whitenoise = "^6.5.0"
django-hurricane = "^1.3.4"
openpyxl = "3.0.10" # TODO: dependency of `pyexcel-xlsx` Remove as soon as https://github.com/pyexcel/pyexcel-xlsx/issues/52 is resolved.

[tool.poetry.dev-dependencies]
black = "23.3.0"
coverage = "7.2.7"
django-extensions = "3.2.3"
factory-boy = "3.2.1"
flake8 = "6.0.0"
flake8-blind-except = "0.2.1"
flake8-debugger = "4.1.2"
flake8-deprecated = "2.0.1"
flake8-docstrings = "1.7.0"
flake8-isort = "6.0.0"
flake8-string-format = "0.3.0"
ipdb = "0.13.13"
isort = "5.12.0"
pdbpp = "0.10.3"
pytest = "7.4.0"
pytest-cov = "4.0.0"
pytest-django = "4.5.2"
pytest-env = "0.6.2"
# needs to stay at 2.1.0 because of wrong interpretation of parameters with "__"
pytest-factoryboy = "2.1.0"
pytest-freezegun = "0.4.2"
pytest-mock = "3.7.0"
pytest-randomly = "3.12.0"
requests-mock = "1.9.3"
snapshottest = "0.6.0"

[tool.isort]
skip = [
	"migrations",
	"snapshots",
]
known_first_party = ["timed"]
known_third_party = ["pytest_factoryboy"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "timed.settings"
addopts = "--reuse-db --randomly-seed=1521188767 --randomly-dont-reorganize"
env = [
    "DJANGO_OIDC_USERNAME_CLAIM=sub"
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    "ignore:Using a non-boolean value for an isnull lookup is deprecated, use True or False instead.:django.utils.deprecation.RemovedInDjango40Warning",
    # following is needed beceause of https://github.com/mozilla/mozilla-django-oidc/pull/371
    "ignore:distutils Version classes are deprecated:DeprecationWarning", # deprecation in pytest-freezegun
    "ignore:django.conf.urls.url().*:django.utils.deprecation.RemovedInDjango40Warning",
    "ignore:.*is deprecated in favour of new moneyed.l10n.format_money.*",
    "ignore:.*invalid escape sequence.*",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "pragma: todo cover",
    "def __str__",
    "def __unicode__",
    "def __repr__",
]
omit = [
    "*/migrations/*",
    "*/apps.py",
    "*/admin.py",
    "manage.py",
    "timed/settings_*.py",
    "timed/wsgi.py",
    "timed/forms.py",
    "setup.py",
]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
